# gridzer0.discord.technical-analyst

./: .env.example  .gitignore  README.md  app.py  fixed_file.py  launcher.py  main.py  main_new.py  pyproject.toml  requirements.txt  test_crypto_api.py
discord_bot/: __init__.py  bot.py  embeds.py  ui.py
discord_bot_module/: README.md  __init__.py  config.py
discord_bot_module/bot/: __init__.py  bot.py  events.py
discord_bot_module/commands/: __init__.py  analyze.py  base.py  help.py  portfolio_example.py
discord_bot_module/embeds/: __init__.py  analysis_embeds.py  help_embeds.py
discord_bot_module/handlers/: __init__.py  error_handler.py  interaction_handler.py
discord_bot_module/utils/: formatters.py  parsers.py  validators.py
docs/: COMPLETION_SUMMARY.md  USAGE_TRACKING_SIMPLIFIED.md
scripts/: setup_database.py
src/: __init__.py
src/components/: __init__.py  analysis_display.py  sidebar.py
src/config/: __init__.py  settings.py
src/database/: __init__.py  usage_tracker.py
src/discord_bot/: admin_commands.py  bot.py  embeds.py  ui.py  user_commands.py
src/models/: __init__.py
src/services/: __init__.py  ai_analysis_service.py  chart_image_service.py  crypto_market_data_service.py  market_data_service.py  technical_analysis_service.py
src/utils/: __init__.py  logging_utils.py
